# dumb_Index

./: CMakeLists.txt  README.md  bruteforce_index.cpp
